@@ -31,6 +31,7 @@ TODO: fix/describe logic for changing input format (multiple headers in non-seek
 - libmpg123 API version 36 (see NEWS.libmpg123)
 - Add --ignore-streamlength.
 - But also deal with concatenated (Frankenstein) streams: Not applying gapless cutting once we're over the announced number of frames.
+- Also, gapless cutting is only applied if relevant information is present. Previously, at least the decoder delay has been cut.
 - Add --lyrics for printout of lyrics (from USLT in ID3v2).
 - Added handling of SIGUSR1 and SIGUSER2 to terminal control code, configurable via --ctrlusr1 and --ctrlusr2.
 - Some low-level API added (mpg123_framedata(), mpg123_framepos(), buffering and resampling control).
